[package]
name = "binary-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.2.0"
proptest-derive = "0.3.0"
test-case = "3.1.0"

[[bench]]
name = "benchmark"
harness = false
